--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,7 @@
             <div class="card-header text-center">
                 <h1>Style Transfer</h1>
             </div>
+            <p class="text-center">Created by arditfab</p>
             <div class="card-body">
                 <form id="styleTransferForm" enctype="multipart/form-data">
                     <div class="form-group">
@@ -36,8 +37,10 @@
                 </div>
             </div>
         </div>
+        
     </div>
-
+    
     <script src="/js/script.js"></script>
+
 </body>
 </html>
